# src/calendar/user/model.js
@@ -40,22 +40,23 @@ class CalendarUserModel extends Model {
             }
         });
 
-        return Object.entries(uniqueParticipants).map(([userId, role]) => ({ userId: Number(userId), role }));
+        return Object.entries(uniqueParticipants)
+            .map(([userId, role]) => ({ userId: Number(userId), role }));
     }
 
     /**
      *
      * @param {number} calendarId
-     * @param {[{userId: number, role: string}]} participants
+     * @param {[{userId: number, color: string, role: string, isConfirmed: boolean}]} participants
      * @return {Promise<void>}
      */
     async syncParticipants(calendarId, participants) {
         if (participants.length === 0) {
-            throw new Error('There must be at least one participant');
+            throw new Error('There must be at least one participant.');
         }
 
-        if (participants.filter(participant => participant.role === 'owner').length !== 1) {
-            throw new Error('There must be only one owner');
+        if (participants.filter(p => p.role === 'owner').length !== 1) {
+            throw new Error('There must be only one owner.');
         }
 
         participants = this._getUniqueLowestRoles(participants);
@@ -65,20 +66,30 @@ class CalendarUserModel extends Model {
         ]);
 
         for (const calendarUser of calendarUsers) {
-            if (!participants.find(participant => participant.userId === calendarUser.userId)) {
+            if (!participants.find(p => p.userId === calendarUser.userId)) {
                 await calendarUser.delete();
-            } else if(participants.find(participant => participant.userId === calendarUser.userId && participant.role !== calendarUser.role)) {
-                calendarUser.role = participants.find(participant => participant.userId === calendarUser.userId).role;
+            } else if (
+                participants.find(p => p.userId === calendarUser.userId
+                    && (p.role !== calendarUser.role
+                        || p.color !== calendarUser.color
+                        || p.isConfirmed !== calendarUser.isConfirmed))
+            ) {
+                const participantToUpdate = participants.find(p => p.userId === calendarUser.userId);
+                calendarUser.role = participantToUpdate.role;
+                calendarUser.color = participantToUpdate.color;
+                calendarUser.isConfirmed = participantToUpdate.isConfirmed;
                 await calendarUser.save();
             }
 
-            participants = participants.filter(participant => participant.userId !== calendarUser.userId);
+            participants = participants.filter(p => p.userId !== calendarUser.userId);
         }
 
         const calendarUserModel = new CalendarUserModel();
         const userModel = new UserModel();
+
         for (const participant of participants) {
             const user = await userModel.getEntityById(participant.userId);
+
             if (!user) {
                 continue;
             }
@@ -86,9 +97,10 @@ class CalendarUserModel extends Model {
             const calendarUser = calendarUserModel.createEntity({
                 calendarId: calendarId,
                 userId: participant.userId,
+                color: participant.color,
                 role: participant.role,
                 isMain: false,
-                isConfirmed: participant.role === 'owner'
+                isConfirmed: participant.isConfirmed ?? participant.role === 'owner'
             });
 
             await calendarUser.save();
@@ -98,6 +110,12 @@ class CalendarUserModel extends Model {
     async getCalendarsByUserId(userId) {
         return await this.getEntities([], [
             new Where('userId', '=', userId)
+        ]);
+    }
+
+    async getCalendarsByCalendarId(calendarId) {
+        return await this.getEntities([], [
+            new Where('calendarId', '=', calendarId)
         ]);
     }
 }
